# mdi-sam-server

./: .env  .gitignore  Dockerfile  README.md  init.sh  pyproject.toml  requirements.txt
docs/: api.md  接口文档.md
mdi_sam_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
models/: download_ckpts.sh
src/: run_mdi_sam.py  run_server.py
src/label_studio_ml_mdi/: __init__.py  api.py  model.py  utils.py
src/label_studio_ml_mdi/conf/: settings.py
src/label_studio_ml_mdi/tests/: test_parsar.py  test_parse2.py  test_utils.py
src/mdi_sam_server/: nohup.out
src/mdi_sam_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mdi_sam_server/label_studio_ml_mdi/: __init__.py  utils.py
src/mdi_sam_server/label_studio_ml_mdi/conf/: settings.py
src/mdi_sam_server/label_studio_ml_mdi/tests/: test_log.py  test_parse.py
src/mdi_sam_server/sam_backend/: __init__.py  requirements.txt  sam_predictor.py  start.sh
src/sam_backend/: _wsgi.py  cache.db  model.py  requirements.txt  sam_predictor.py  start.sh
tests/: run_test.py  test_api.py
