[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdi_sam_server"
version = "0.1.0"
description = "a flask server for SAM2, SAM1, and other SAM models"
authors = [
    { name="Cheng ZHANG", email="czhangcn@connect.ust.hk" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "label-studio-converter>=0.0.58",
    "opencv-python==4.8.0.76",
    "onnx==1.14.1",
    "torch==2.4.0",
    "torchvision",
    "gunicorn==20.1.0",
    "rq==1.10.1",
    "timm",
    "Flask==2.3.3",
    "flask_cors",
    "segment_anything @ git+https://github.com/facebookresearch/segment-anything.git",
    "SAM-2 @ git+https://github.com/facebookresearch/segment-anything-2.git",
    "mobile-sam @ git+https://github.com/ChaoningZhang/MobileSAM.git",
    "python-dotenv==1.0.0",
    "colorama~=0.4",
    "pydantic==1.10.13",
    "aiohttp==3.10.5",
    "matplotlib>=3.9.2",
    "label-studio-tools==0.0.3",
    "numpy==1.26.0"
]

[project.urls]
homepage = "https://mdi.hkust-gz.edu.cn/"
repository = "https://github.com/HKUSTMDI/mdi-ml-sam"

[project.scripts]
mdi_sam_server = "mdi_sam_server.cli:main"

